--- a/wissen/static/css/var.css
+++ b/wissen/static/css/var.css
@@ -11,6 +11,7 @@
     /*fuentes*/
     --font-color: rgb(0,0,0) ;
     --font-weight:500;
+    --form-font: "InterVariable",sans-serif;
 
     /*transition*/
 
