--- a/wissen/templates/base.html
+++ b/wissen/templates/base.html
@@ -1,54 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link
+            rel="stylesheet"
+            href="{{url_for('static',filename='css/normalize.css')}}"
+        />
+        <link
+            rel="stylesheet"
+            href="{{url_for('static',filename='css/style.css')}}"
+        />
+        <link
+            rel="stylesheet"
+            href="{{url_for('static',filename='css/var.css')}}"
+        />
+        <link
+            rel="stylesheet"
+            href="{{url_for('static',filename='css/carousel.css')}}"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/normalize.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/var.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/carousel.css')}}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        {% block style %}
+        <!-- Custom Css-->
 
-    {% block style %}
-    <!-- Custom Css-->
+        {% endblock %}
 
-    {% endblock %}
+        <title>{% block title %} Wissen | {% endblock %}</title>
+    </head>
 
-    <title>{% block title %} Wissen | {% endblock %}</title>
+    <body>
+        {% block content%}
+        <!-- Contenido -->
+        {% endblock %}
 
-</head>
+        <!-- Mensajes flasheados -->
+        <section class="content">
+            {% for message in get_flashed_messages() %}
+            <div class="flash alert alert-danger" role="alert">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </section>
 
-<body>
+        <!-- Script -->
+        {% block script %}
+        <!-- Custom scripts -->
+        {% endblock %}
 
-    {% block content%}
-    <!-- Contenido -->
-    {% endblock %}
+        <!-- This file need to be check-->
+        <script src="{{url_for('static',filename='js/navbar_dropdown.js')}}"></script>
 
-    <!-- Mensajes flasheados -->
-    <section class="content">
-        {% for message in get_flashed_messages() %}
-        <div class="flash alert alert-danger" role="alert">
-            {{ message }}
-        </div>
-        {% endfor %}
-    </section>
-
-    <!-- Script -->
-    {% block script %}
-    <!-- Custom scripts -->
-    {% endblock %}
-
-    <!-- This file need to be check-->
-    <script src="{{url_for('static',filename='js/navbar_dropdown.js')}}"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.7"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{url_for('static',filename='js/button.js')}}"></script>
-</body>
-
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.7"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="{{url_for('static',filename='js/button.js')}}"></script>
+        <script src="{{url_for('static',filename='js/eyePassword.js')}}"></script>
+    </body>
 </html>
