--- a/wissen/templates/auth/register.html
+++ b/wissen/templates/auth/register.html
@@ -22,7 +22,13 @@
 
         <label for="password">Crear contrasena: </label>
         <div class="password-container" id="eye-container1">
-            <input type="password" name="password" class="password" required />
+            <input
+                type="password"
+                name="password"
+                class="password"
+                id="password-main"
+                required
+            />
             <div class="button-container">
                 <img
                     src="../static/picture/view.png"
@@ -39,6 +45,7 @@
                 type="password"
                 name="password-verify"
                 class="password"
+                id="password-verify"
                 required
             />
             <div class="button-container" id="eye-container2">
